--- a/public/styles/main.css
+++ b/public/styles/main.css
@@ -1,5 +1,12 @@
-body{
-    width: 96vw;
+body {
+    width: 100vw;
     height: 100vh;
-    margin: 0 2vw;
+}
+
+.h-10 {
+    height: 10%;
+}
+
+.h-80 {
+    height: 80%;
 }
