--- a/views/home.ejs
+++ b/views/home.ejs
@@ -4,66 +4,55 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap JS and Popper.js -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/styles/main.css">
 
-    <title>DailyScribe</title>
-    <script>
-        function goToNewPostPage() {
-            window.location.href = '/posts/new';
-        }
-        function goToPostPage(postId) {
-            window.location.href = `/posts/${postId}`;
-        }
-    </script>
-    <style>
-        #homepage{
-            height: 80%;
-            overflow-y:scroll;
-            overflow-x: hidden;
-        }
-        #postList {
-            display: flex;
-            flex-direction: column;
-            justify-content: space-around;
-            width: 50%;
-            height: 80%;
-        }
-
-        #postList .postCon {
-            width:100%;
-            height: 20%;
-            display: -webkit-box;
-            -webkit-line-clamp: 4;
-            -webkit-box-orient: vertical;
-            overflow: hidden;
-            height: 4.8em; /* approx 4 lines at 1.2em each */
-            cursor: pointer;
-        }
-        #postList .postCon:hover{
-            border: 1px solid grey;
-            background-color: gainsboro;
-        }
-       
-           
-    </style>
+    <title>DailyScribe - Home</title>
 </head>
 
 <body>
+    <div class="d-flex flex-column w-100 h-100">
 
-    <%- include('./partials/header') %>
-        <div id="homepage">
-            <h1>Hello <%= locals.userName %></h1>
-            <div id="postList">
-                <% locals.posts.forEach(post=> { %>
-                    <div class="postCon" onclick="goToPostPage('<%= post.id %>')">
-                        <strong> <%= post.title %>, </strong>
-                        <span><%= post.userName %></span>
-                        <div class="content"> <%= post.content %> </div>
+        <% if(typeof error !== 'undefined'){ %>
+            <%- include('./partials/errorMsg') %>
+        <% } %>
+
+        <%- include('./partials/header') %>
+            <main class="container h-80 overflow-auto">
+                <!-- Header row -->
+                <div class="row my-2">
+                    <div class="col d-flex justify-content-between align-items-center">
+                        <h1>Recent Posts</h1>
+                        <a href="/posts/new" class="btn btn-outline-primary">Create New Post</a>
                     </div>
-                    <% }); %>
-            </div>
-            <button onclick="goToNewPostPage()">Write a post</button>
-        </div>
+                </div>
+
+                  <!-- Posts row -->
+                <% if (posts.length> 0) { %>
+                    <div class="row my-2">
+                        
+                            <% posts.forEach(post=> { %>
+                                <div class="col-md-4 my-4">
+                                    <%- include('./partials/post/postCard', { post }) %>
+                                </div>
+                            <% }); %>
+                       
+                    </div>
+                <% } else { %>
+                        <div class="row my-2">
+                            <div class="col">
+                                <div class="lead">No posts yet. Be the first to create one!</div>
+                            </div>
+                        </div>
+                        <% } %>
+            </main>
+            <%- include('partials/footer') %>
+    </div>
 </body>
 
 </html>
