--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -20,12 +20,9 @@
             <div class="container h-80 mt-5">
                 <div class="row">
                     <div class="col-md-8 mx-auto text-center">
-                        <h1 class="display-4 mb-4">Welcome to DailyScribe</h1>
-                        <p class="lead mb-4">Share your thoughts, connect with others, and be part of our community.</p>
-                        <div class="d-flex justify-content-center gap-3">
-                            <a href="/login" class="btn btn-primary btn-lg">Login</a>
-                            <a href="/signUp" class="btn btn-outline-primary btn-lg">Sign Up</a>
-                        </div>
+                        <h1 class="display-4">404 Not Found</h1>
+                        <p class="lead">The page you are looking for does not exist.</p>
+                        <a href="/home" class="btn btn-primary">Go to Home</a>
                     </div>
                 </div>
             </div>
