--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,33 +1,31 @@
-<style>
-    .navbar{
-        height: 10%;
-    }
-    ul {
-        display: flex;
-        list-style: none;
-        padding: 10px 0;
-        background-color: grey;
-        margin: 0;
-    }
+<nav class="navbar h-10 bg-light shadow-sm">
+    <div class="container">
+        <div class="row w-100 justify-content-between">
 
-    li {
-        padding-left: 20px;
-    }
+            <strong class="col-md-6 d-flex flex-row">
+                <a class="navbar-brand" href="/home">DailyScribe</a>
+            </strong>
 
-    li a {
-        text-align: center;
-        padding: 16px;
-        text-decoration: none;
-        color: white;
-    }
-</style>
+            <div class="col-md-6">
+                <ul class="navbar-nav d-flex flex-row justify-content-end gap-3">
+                    <li class="nav-item">
+                        <a class="nav-link" href="/home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/users/profile">Profile</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/posts/new">New Post</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/logout">Logout</a>
+                    </li>
+                </ul>
+            </div>
 
-
-<nav class="navbar">
-    <ul class="navbar-links">
-        <li>DailyScribe</li>
-        <li><a href="/">Home</a></li>
-        <li><a href="/">About</a></li>
-        <li><a href="/posts/new">Make a post</a></li>
-    </ul>
+        </div>
+    </div>
 </nav>
+
+
+
