--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,13 +1,2 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Error</title>
-</head>
-<body>
-    <%- include('partials/header') %>
-    <h1>Error occured <%= error %></h1>
-    <%- include('partials/footer') %>
-</body>
-</html>
+<h1>Error occured <%= error %></h1>
+<p>Please try again later</p> 
