--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,58 +1,26 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-
-    <!-- Bootstrap CSS -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
-    <link rel="stylesheet" href="/styles/main.css">
-
-    <title>DailyScribe - Home</title>
-</head>
-
-<body>
-    <div class="d-flex flex-column w-100 h-100">
-
-        <% if(typeof error !== 'undefined'){ %>
-            <%- include('./partials/errorMsg') %>
-        <% } %>
-
-        <%- include('./partials/header') %>
-            <main class="container h-80 overflow-auto">
-                <!-- Header row -->
-                <div class="row my-2">
-                    <div class="col d-flex justify-content-between align-items-center">
-                        <h1>Recent Posts</h1>
-                        <a href="/posts/new" class="btn btn-outline-primary">Create New Post</a>
-                    </div>
-                </div>
-
-                  <!-- Posts row -->
-                <% if (posts.length> 0) { %>
-                    <div class="row my-2">
-                        
-                            <% posts.forEach(post=> { %>
-                                <div class="col-md-4 my-4">
-                                    <%- include('./partials/post/postCard', { post }) %>
-                                </div>
-                            <% }); %>
-                       
-                    </div>
-                <% } else { %>
-                        <div class="row my-2">
-                            <div class="col">
-                                <div class="lead">No posts yet. Be the first to create one!</div>
-                            </div>
-                        </div>
-                        <% } %>
-            </main>
-            <%- include('partials/footer') %>
+<!-- Header row -->
+<div class="row mb-2">
+    <div class="col d-flex justify-content-between align-items-center">
+        <h1>Recent Posts</h1>
+        <a href="/posts/new" class="btn btn-outline-primary">Create New Post</a>
     </div>
-</body>
+</div>
 
-</html>
+<!-- Posts row -->
+<% if (posts.length> 0) { %>
+    <div class="row my-2">
+
+        <% posts.forEach(post=> { %>
+            <div class="col-md-4 my-4">
+                <%- include('./partials/shared/postCard', { post }) %>
+            </div>
+            <% }); %>
+
+    </div>
+    <% } else { %>
+        <div class="row my-2">
+            <div class="col">
+                <div class="lead">No posts yet. Be the first to create one!</div>
+            </div>
+        </div>
+    <% } %>
