seeds addition + about,contact page addition + style improving

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,5 @@
 <!-- Header row -->
-<div class="row mb-2">
+<div class="row mt-5">
     <div class="col d-flex justify-content-between align-items-center">
         <h1>Recent Posts</h1>
         <a href="/posts/new" class="btn btn-outline-primary">Create New Post</a>
