--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,5 +1,5 @@
 
-<div class="row">
+<div class="row mt-5">
     <div class="col-md-8 mx-auto text-center">
         <h1 class="display-4 mb-4">Welcome to DailyScribe</h1>
         <p class="lead mb-4">Share your thoughts, connect with others, and be part of our community.</p>
