--- a/views/contact.ejs
+++ b/views/contact.ejs
@@ -1,3 +1,4 @@
+<!-- Contact page body -->
 <div class="w-75 h-100 mx-auto text-center d-flex flex-column justify-content-evenly">
     <h1 class="">Contact Me</h1>
   <p class="lead">
