--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,3 +1,4 @@
+<!-- Header -->
 <nav class="navbar h-10 bg-light shadow-sm">
     <div class="container">
         <div class="row w-100 justify-content-between">
@@ -6,6 +7,7 @@
                 <a class="navbar-brand" href="/home">DailyScribe</a>
             </strong>
 
+            <!-- If user is logged in, show navigation links -->
             <% if(user){ %>
                 <div class="col-md-6">
                     <ul class="navbar-nav d-flex flex-row justify-content-end gap-3">
