--- a/views/welcome.ejs
+++ b/views/welcome.ejs
@@ -1,4 +1,4 @@
-
+<!-- Welcome page body -->
 <div class="row mt-5">
     <div class="col-md-8 mx-auto text-center">
         <h1 class="display-4 mb-4">Welcome to DailyScribe</h1>
