--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,3 +1,5 @@
+<!-- Home page body -->
+ 
 <!-- Header row -->
 <div class="row mt-5">
     <div class="col d-flex justify-content-between align-items-center">
