--- a/views/layout/main.ejs
+++ b/views/layout/main.ejs
@@ -1,3 +1,4 @@
+<!-- Main layout -->
 <!DOCTYPE html>
 <html lang="en">
 
@@ -8,28 +9,30 @@
     <title><%= typeof title !== "undefined" ? title : "DailyScribe" %></title>
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Bootstrap JS and Popper.js -->
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.min.js"></script>
     <link rel="stylesheet" href="/styles/main.css">
 </head>
 
 <body>
     <div class="d-flex flex-column w-100 h-100">
-
+        <!-- Error message -->
         <% if(typeof error !== 'undefined'){ %>
             <%- include('../partials/messages/errorMsg') %>
         <% } %>
-        
+
+        <!-- Success message -->
         <% if(typeof success !== 'undefined'){ %>
             <%- include('../partials/messages/successMsg') %>
         <% } %>
 
+        <!-- Header -->
         <%- include('../partials/header') %>
+
+        <!-- Main content -->
         <main class="container h-80 overflow-auto">
-            <%- body %> <!-- This is where your page-specific content will be inserted -->
+            <%- body %>
         </main>
 
+        <!-- Footer -->
         <%- include('../partials/footer') %>
     </div>
 
