--- a/views/notFound.ejs
+++ b/views/notFound.ejs
@@ -1,3 +1,4 @@
+<!-- Not found page body -->
 <div class="row">
     <div class="col-md-8 mx-auto text-center">
         <h1 class="display-4">404 Not Found</h1>
