--- a/views/partials/messages/errorMsg.ejs
+++ b/views/partials/messages/errorMsg.ejs
@@ -1,3 +1,4 @@
+<!-- Error message -->
 <div class="alert alert-danger alert-dismissible fade show fixed-top shadow" 
       role="alert" 
       style="z-index: 1055;">
