--- a/views/partials/messages/successMsg.ejs
+++ b/views/partials/messages/successMsg.ejs
@@ -1,3 +1,4 @@
+<!-- Success message -->
 <div class="alert alert-success alert-dismissible fade show" role="alert">
     <%= success %>
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
