--- a/views/partials/shared/commentCard.ejs
+++ b/views/partials/shared/commentCard.ejs
@@ -1,3 +1,4 @@
+<!-- Comment card -->
 <div class="card h-100">
     <div class="card-body d-flex flex-column">
         <small class="card-text">
@@ -11,7 +12,8 @@
                 <%= comment.post.title %>
             </a>
         </small>
-
+    
+        <!-- If user is the author of the comment, show delete button -->
         <% if (user?.id && user.id === comment.authorId) { %>
             <div class="mt-2 d-flex gap-2">
                 <form action="/posts/<%= comment.post.id %>/comment/<%= comment.id %>?_method=DELETE" method="POST">
