--- a/views/partials/shared/postCard.ejs
+++ b/views/partials/shared/postCard.ejs
@@ -1,3 +1,4 @@
+<!-- Post card -->
 <div class="card h-100">
     <div class="card-body d-flex flex-column">
         <h5 class="card-title">
@@ -11,6 +12,8 @@
         </p>
         <div class="d-flex gap-2">
             <a href="/posts/<%= post.id %>" class="btn btn-primary">Read More</a>
+            
+            <!-- If user is the auther of the post, show delete button -->
             <% if (user?.id && user.id === post.authorId) { %>
                 <form action="/posts/<%= post.id %>?_method=DELETE" method="POST">
                     <button type="submit" class="btn btn-danger">Delete</button>
